--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ title:               Poole
 tagline:             The Jekyll Butler
 url:                 http://jiteshjha.github.io/poole
 paginate:            1
-baseurl:             ""
+baseurl:             "http://jiteshjha.github.io/poole/"
 
 # Assets
 #
