--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:           pretty
 # Setup
 title:               Poole
 tagline:             The Jekyll Butler
-url:                 http://jiteshjha.github.io/poole
+url:                 http://jiteshjha.github.io/blog
 paginate:            1
-baseurl:             "http://jiteshjha.github.io/poole/"
+baseurl:             "http://jiteshjha.github.io/blog/"
 
 # Assets
 #
@@ -27,4 +27,4 @@ author:
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/jiteshjha/poole
+  repo:              https://github.com/jiteshjha/blog
