--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ permalink:           pretty
 # Setup
 title:               Blog
 tagline:             Jitesh Kumar Jha
-url:                 http://jiteshjha.github.io/blog
+url:                 http://jiteshjha.github.io/blog1
 paginate:            5
-baseurl:             "http://jiteshjha.github.io/blog/"
+baseurl:             "http://jiteshjha.github.io/blog1/"
 
 # Assets
 #
@@ -27,4 +27,4 @@ author:
 # Custom vars
 version:             2.0.0
 github:
-  repo:              https://github.com/jiteshjha/blog
+  repo:              https://github.com/jiteshjha/blog1
